# university-projects

./: .gitattributes
2020_2021/1st_Semester/ARI1102 - Programming for AI/: City Web Portal - Nathan Bonavia Zammit - 0198402L.rar  Documentation for Web City Portal - Nathan Bonavia Zammit - 0198402L.docx
2020_2021/1st_Semester/CPS1011 - Programming Principles in C/C_Project/cps1011-assignment-base-code-master/cps1011-basecode/: CMakeLists.txt  main_1.c  main_2.c  question_1.c  question_1_unit_tests.c  question_2.c  question_2_unit_tests.c
2020_2021/1st_Semester/CPS1011 - Programming Principles in C/C_Project/cps1011-assignment-base-code-master/cps1011-basecode/includes/: minunit.h  question_1.h  question_2.h
2020_2021/2nd_Semester/CPS1012 - Operating Systems and Systems Programming 1/: CMakeLists.txt  main.c  main.h
2021_2022/1st_Semester/Automated_Planning/: 8-Tile-Puzzle.ipynb  ARI2101_Assignment_Documentation.odt  (+1 more)
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/CPS2000_2019_2/code/: CMakeLists.txt
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/CPS2000_2019_2/code/InputFiles/: FloatsAndInts.txt  LexerTest.txt  NestedIfs.txt  RunTimeError.txt  SemanticAnalysisTest.txt
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/CPS2000_2019_2/code/src/: main.cpp
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/CPS2000_2019_2/code/src/Helper/: Helper.cpp  Helper.h
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/CPS2000_2019_2/code/src/Lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/CPS2000_2019_2/code/src/Parser/: AST.cpp  AST.h  Parser.cpp  Parser.h  TokenManager.cpp  TokenManager.h
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/CPS2000_2019_2/code/src/Visitor/: IVisitor.cpp  SAVisitor.cpp  Visitor.h  XMLVisitor.cpp
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/Compiler Final/: CMakeLists.txt
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/Compiler Final/Helper/: Helper.h
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/Compiler Final/InputFiles/: ReturnWorkingProperly.txt
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/Compiler Final/Lexer/: Lexer.h  Token.cpp
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/Compiler Final/Parser/: AST.cpp  AST.h  TokenManager.cpp  TokenManager.h
2021_2022/2nd_Semester/Compiler_Theory_and_Practice/Compiler Final/Visitor/: Visitor.h
(+265 files in other folders)
